erDiagram
    %% @surreal.schemafull
    %% @surreal.aggregate "QuestRun (Models/Quest/QuestRun.cs)"
    %% @surreal.guardrail "G6 SCHEMAFULL; runtime canonical lineage carrier. One row per execution attempt of a quest."
    %% @surreal.note "Replaces the in-place mutation of Quest.Status that prevented re-runs from preserving prior attempt state -- see quest-temporal-fork-model ADR §1. Re-running a Succeeded quest creates a NEW root run (parent_run_id = null); forking a Running run creates a CHILD run with parent_run_id set."
    %% @surreal.note "Lineage forms a TREE via parent_run_id, not a DAG. The forked_from RELATE edge (defined separately in surrealdb-migration §6.1) mirrors parent_run_id for native graph-traversal queries. Both must be kept in sync at write time."
    %% @surreal.note "State machine invariants are enforced in QuestManager, not in the DB: Pending->Running (first claim), Running->{Succeeded|Failed|Forked|Cancelled} (terminal). fail_reason carries the supervisor-driven audit string; internal-error failures leave fail_reason null and write the error on the failed quest_node_execution row instead."
    %% @surreal.slice "quest"
    quest_run {
        %% @surreal.fieldgroup "Run identity (record id is the Guid('N') of QuestRun.Id) -- unique across all runs of all quests"
        %% @surreal.assert "$value != NONE AND $value != \"\""
        string id
        %% @surreal.fieldgroup "Quest definition this run executes"
        %% @surreal.assert "$value != NONE AND $value != \"\""
        string quest_id
        %% @surreal.fieldgroup "Avatar that initiated this run (denormalized for query convenience)"
        %% @surreal.assert "$value != NONE AND $value != \"\""
        string avatar_id
        %% @surreal.fieldgroup "QuestRunStatus enum name"
        %% @surreal.assert "$value INSIDE [\"Pending\", \"Running\", \"Succeeded\", \"Failed\", \"Forked\", \"Cancelled\"]"
        %% @surreal.default "\"Pending\""
        string status
        %% @surreal.fieldgroup "Wall-clock time at which the run row was created"
        datetime started_at
        %% @surreal.fieldgroup "Wall-clock time at which the run reached a terminal state (null while non-terminal)"
        option<datetime> ended_at
        %% @surreal.fieldgroup "Parent run id if forked from another; null for root runs"
        option<string> parent_run_id
        %% @surreal.fieldgroup "Node at which the fork occurred (set iff this is a child fork run)"
        option<string> forked_at_node_id
        %% @surreal.fieldgroup "Free-form audit reason supplied when fork was triggered"
        option<string> fork_reason
        %% @surreal.fieldgroup "Free-form audit reason when a supervisor explicitly marked the run failed (distinct from internal-error path)"
        option<string> fail_reason
        %% @surreal.index fields=[quest_id] name=quest_run_by_quest
        %% @surreal.index fields=[avatar_id] name=quest_run_by_avatar
        %% @surreal.index fields=[status] name=quest_run_by_status
        %% @surreal.index fields=[parent_run_id] name=quest_run_by_parent
    }

    quest     ||--o{ quest_run : "executed by"
    avatar    ||--o{ quest_run : "initiated by (cross-slice: identity)"
    quest_run o|--o| quest_run : "parent / fork lineage"
